refactor(backend): use toList instead of Collectors